# DSS_KedroWorkshop

kedro-101/: README.md  pyproject.toml
kedro-101/conf/base/: catalog.yml  parameters_my_first_pipeline.yml
kedro-101/src/kedro_101/: __init__.py  __main__.py  settings.py
kedro-101/src/kedro_101/pipelines/data_cleaning/: nodes.py  pipeline.py
kedro-101/src/kedro_101/pipelines/my_first_pipeline/: __init__.py  nodes.py  pipeline.py
kedro-101/tests/pipelines/my_first_pipeline/: test_pipeline.py
